jenkins/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: cicd
  labels:
    app: jenkins
    component: ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/headers.customrequestheaders.X-Forwarded-Proto: "https"
    traefik.ingress.kubernetes.io/headers.customrequestheaders.X-Forwarded-Host: "jenkins.team1.devops.pmifi.ru"
    traefik.ingress.kubernetes.io/headers.customrequestheaders.X-Forwarded-Port: "443"
spec:
  tls:
    - hosts:
        - jenkins.team1.devops.pmifi.ru
      secretName: multi-domain-tls
  rules:
    - host: jenkins.team1.devops.pmifi.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
